# temporal-answer-qa

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/prompts/: tot_arithmetic_few_shot.json  tot_semantic_few_shot.json  ttqa_few_shot.json  ttqa_system_prompt_zero_shot.txt
data/questions/: LICENSE  README.md  ttqa.csv
data/responses/: tot_arithmetic_Llama-3.1-8B-Instruct_few-shot_continue_final_message.csv  tot_arithmetic_Llama-3.1-8B-Instruct_zero-shot_continue_final_message.csv  tot_arithmetic_Llama-3.3-70B-Instruct_few-shot_continue_final_message.csv  tot_arithmetic_Llama-3.3-70B-Instruct_zero-shot_continue_final_message.csv  tot_arithmetic_Phi-4-mini-instruct_few-shot_continue_final_message.csv  tot_arithmetic_Phi-4-mini-instruct_zero-shot_continue_final_message.csv  tot_arithmetic_Phi-4_few-shot_continue_final_message.csv  tot_arithmetic_Phi-4_zero-shot_continue_final_message.csv  tot_arithmetic_Qwen2.5-14B-Instruct_few-shot_continue_final_message.csv  tot_arithmetic_Qwen2.5-14B-Instruct_zero-shot_continue_final_message.csv  tot_arithmetic_Qwen2.5-7B-Instruct_few-shot_continue_final_message.csv  tot_arithmetic_Qwen2.5-7B-Instruct_zero-shot_continue_final_message.csv  ttqa_head_Llama-3.1-8B-Instruct_few-shot_add_generation_prompt.csv  (+23 more)
temp_answer_qa/: __init__.py  chat_builder.py  data_loader.py  evaluate.py  inference.py  measure_error.py  metrics.py  models.py  response_processing.py
tests/: test_chat_builder.py  test_error_measurement.py  test_inference.py  test_metrics.py  test_tot_response_processing.py  test_ttqa_response_processing.py
(+1 files in other folders)
