[project]
name = "temp-answer-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "accelerate>=1.7.0",
    "datefinder>=0.7.3",
    "dotenv>=0.9.9",
    "numpy>=2.2.6",
    "pandas==2.2.3",
    "pyarrow>=20.0.0",
    "scikit-learn==1.6.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "pandas-stubs>=2.2.3.250527",
    "pytest-clarity>=1.0.1",
    "pytest-datadir>=1.7.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "basedpyright>=1.29.5",
]

[project.optional-dependencies]
gpu = [
    "bitsandbytes>=0.46.1",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
typeCheckingMode = "off"
